--- a/hawc/apps/summary/templates/summary/datapivot_detail.html
+++ b/hawc/apps/summary/templates/summary/datapivot_detail.html
@@ -17,6 +17,7 @@
         <a class="dropdown-item" href="{% url 'summary:dp_update' assessment.pk object.slug %}">Edit display settings</a>
         <a class="dropdown-item" href="{% if object.datapivotquery %}{% url 'summary:dp_query-update' assessment.pk object.slug %}{% else %}{% url 'summary:dp_file-update' assessment.pk object.slug %}{% endif %}">Edit other settings</a>
         <a class="dropdown-item" href="{% url 'summary:dp_delete' assessment.pk object.slug %}">Delete Pivot</a>
+        <a class="dropdown-item" data-toggle="modal" data-target="#tag-modal" hx-get="{% url 'assessment:tag-item' content_type object.pk %}?action=tag" hx-target="#tag-modal-content">Apply tags</a>
       {% endif %}
     {% endactions %}
   </div>
@@ -31,6 +32,8 @@
 
 
   {% endblock dp_content %}
+
+  {% include "assessment/components/tag_modal.html" with modal_id="tag-modal"%}
 
 {% endblock %}
 
