Fixed tag creation bugginess

--- a/hawc/apps/assessment/templates/assessment/tag_list.html
+++ b/hawc/apps/assessment/templates/assessment/tag_list.html
@@ -10,5 +10,5 @@
     Add tag
   </button>
 
-  {% include "assessment/fragments/tag_list.html" with object_list=assessment.tags.all canEdit=True %}
+  {% include "assessment/fragments/tag_list.html" with object_list=tags canEdit=True %}
 {% endblock content %}
