--- a/hawc/apps/summary/templates/summary/summarytable_detail.html
+++ b/hawc/apps/summary/templates/summary/summarytable_detail.html
@@ -19,11 +19,13 @@
           <a class="dropdown-item" href="{{object.get_delete_url}}">
             <i class="fa fa-fw fa-trash"></i>&nbsp;Delete
           </a>
+          <a class="dropdown-item" data-toggle="modal" data-target="#tag-modal" hx-get="{% url 'assessment:tag-item' content_object.0.pk content_object.1 %}?action=tag" hx-target="#tag-modal-content">Apply tags</a>
         {% endif %}
       {% endactions %}
     {% endif %}
   </div>
   <div id="main" style="min-height: 400px"></div>
+  {% include "assessment/components/tag_modal.html" with modal_id="tag-modal"%}
 {% endblock %}
 
 {% block extrajs %}
