--- a/hawc/apps/summary/templates/summary/datapivot_detail.html
+++ b/hawc/apps/summary/templates/summary/datapivot_detail.html
@@ -8,7 +8,7 @@
 
 {% block content %}
   <div class="d-flex">
-    <h2>{{object}}</h2>
+    <h2>{{object}}</h2> {% include "assessment/fragments/tag_indicators.html" with content_type=content_object.0.pk object_id=content_object.1 %}
     {% include "common/unpublished_badge.html" %}
     {% actions %}
       <a class="dropdown-item" href="{{object.get_download_url|safe}}?format=xlsx">Download data file</a>
