added animalv2 htmx and views unit tests

--- a/hawc/apps/animalv2/templates/animalv2/studylevelvalues.html
+++ b/hawc/apps/animalv2/templates/animalv2/studylevelvalues.html
@@ -8,7 +8,7 @@
     {% endif %}
   </div>
   <p class="text-muted vw75 mt-0 mb-2">
-    Set study level values.
+    View study level values.
   </p>
   <div id="studylevelvalue-list">
     {% for object in object_list %}
