--- a/hawc/apps/assessment/templates/assessment/components/tag_modal.html
+++ b/hawc/apps/assessment/templates/assessment/components/tag_modal.html
@@ -1,7 +1,7 @@
 {% extends 'common/modal_template.html' %}
 
 {% block modal_content_wrapper %}
-  <form method="post">
+  <form method="post" class="w-50">
     <div id="tag-modal-content" class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title">
