--- a/hawc/apps/assessment/templates/assessment/fragments/tag_edit_row.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/tag_edit_row.html
@@ -1,36 +1,72 @@
 
-<tr hx-target="this" hx-swap="outerHTML" class="tag-edit-row">
-  {% if form %}
-    <td colspan="4" class="bg-lightblue">
-      <form method="post" enctype="multipart/form-data">
-        {% crispy form %}
-        <div class="form-row d-flex flex-row-reverse px-3 pb-3">
-          {% if form.instance.id %}
-            <button class="btn btn-primary ml-2"
+<div hx-target="this" hx-swap="outerHTML" class="tag-edit-row list-group-item d-flex {% if action == 'delete' %} bg-pink {% else %} bg-lightblue {% endif %}">
+  <form method="post" enctype="multipart/form-data" class="d-flex align-items-center p-1 w-100">
+    <div class="col-md-auto flex-fill pl-0 py-2">
+      {% crispy form %}
+    </div>
+    <div class="col-md-auto p-0">
+      {% if form.instance.id %}
+        <div>
+          {% if action == 'delete' %}
+            {% csrf_token %}
+            <div>
+              <div class="d-flex-row m-0 mb-2">
+                <p class="m-0 d-flex row align-items-center">
+                  <i class="fa fa-fw fa-exclamation-triangle"></i>&nbsp;Are you sure you want to delete?
+                </p>
+                <div class="row pb-1 w-100"></div>
+                <div class="d-flex justify-content-end pl-2">
+                  <button class="btn btn-sm btn-danger"
+                          id="tag-conf-delete"
+                          hx-post="{{ object.get_delete_url }}"
+                          hx-indicator="#spinner-{{object.pk}}"
+                          hx-swap="outerHTML swap:1s"><i class="fa fa-trash"></i>&nbsp;Delete</button>
+                </div>
+              </div>
+            </div>
+          {% else %}
+            <div class="d-flex justify-content-end">
+              <button
+                class="btn btn-sm btn-danger p-2 flex-shrink-0 align-self-end mb-2"
+                id="tag-delete"
+                hx-get="{{ object.get_delete_url }}">
+                <i class="fa fa-fw fa-trash"></i>
+              </button>
+            </div>
+          {% endif %}
+          <div class="d-flex justify-content-end">
+            <i class="fa fa-spinner fa-spin align-self-center htmx-indicator" id="spinner-{{object.pk}}" aria-hidden="true"></i>
+            <button class="btn btn-primary px-4 py-2 ml-2"
+                    id="binding-update"
                     hx-post="{% url 'assessment:tag-htmx' object.pk 'update' %}"
-                    hx-encoding="multipart/form-data">
+                    hx-indicator="#spinner-{{object.pk}}">
               <i class="fa fa-fw fa-save"></i>&nbsp;
               Update
             </button>
-            <button class="btn btn-light"
-                    hx-get="{% url 'assessment:tag-htmx' object.pk 'read' %}">
+            <button class="btn btn-light px-3 py-2 ml-2"
+                    id="binding-cancel"
+                    hx-get="{% url 'assessment:tag-htmx' object.pk 'read' %}"
+                    hx-indicator="#spinner-{{object.pk}}">
               Cancel
             </button>
-          {% else %}
-            <button class="btn btn-primary ml-2"
-                    hx-post="{% url 'assessment:tag-htmx' assessment.pk 'create' %}"
-                    hx-encoding="multipart/form-data">
-              <i class="fa fa-fw fa-save"></i>&nbsp;Create
-            </button>
-            <button class="btn btn-light"
-                    type='button'
-                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.tag-edit-row'), true)">
-              Cancel
-            </button>
-          {% endif %}
+          </div>
         </div>
-      </form>
-    </td>
-    {{ form.media }}
-  {% endif %}
-</tr>
+      {% else %}
+        <i class="fa fa-spinner fa-spin htmx-indicator mr-2" id="spinner-{{object.pk}}" aria-hidden="true"></i>
+        <button class="btn btn-primary px-4 py-2"
+                id="binding-create"
+                hx-post="{% url 'assessment:tag-htmx' assessment.pk 'create' %}"
+                hx-indicator="#spinner-{{object.pk}}">
+          <i class="fa fa-fw fa-save"></i>&nbsp;Create
+        </button>
+        <button class="btn btn-light px-3 py-2 ml-2"
+                id="binding-cancel"
+                type='button'
+                onclick="window.app.HAWCUtils.hideElement($(this).closest('.tag-edit-row'), true)">
+          Cancel
+        </button>
+      {% endif %}
+    </div>
+  </form>
+  {{ form.media }}
+</div>
