--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -52,7 +52,8 @@ input[type="submit"].btn, section button.btn, section input[type="button"].btn, 
 
 .label {
     font-weight: bold;
-    border-radius: 8px 20% 20% 8px;
+    width: fit-content;
+    border-radius: 8px 15px 15px 8px;
     overflow: hidden;
     font-size: 0.85rem;
     padding: .2rem 1rem .2rem .4rem;
