--- a/hawc/apps/summary/templates/summary/visual_list.html
+++ b/hawc/apps/summary/templates/summary/visual_list.html
@@ -24,7 +24,10 @@
       {% for visual in objects %}
         <tr>
           <td>
-            <a href="{{visual.get_absolute_url}}">{{visual.title}}{{visual.tags}}</a>
+            <a href="{{visual.get_absolute_url}}">{{visual.title}}</a>
+            {% for tagged_item in visual.tags.all %}
+            <span class="label tny mx-1 mb-3" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</span>
+            {% endfor %}
             {% if not visual.published %}
               <i class="fa fa-eye-slash" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
             {% endif %}
