change 'tag' to 'label' across UI

--- a/hawc/apps/assessment/templates/assessment/components/tag_modal.html
+++ b/hawc/apps/assessment/templates/assessment/components/tag_modal.html
@@ -5,7 +5,7 @@
     <div id="tag-modal-content" class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title">
-          Apply tags
+          Apply labels
         </h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
