--- a/hawc/apps/assessment/templates/assessment/components/tag_modal_content.html
+++ b/hawc/apps/assessment/templates/assessment/components/tag_modal_content.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title">
-    Apply Tags
+    Apply labels
   </h4>
   <button type="button" class="close text-dark" data-dismiss="modal" aria-label="Close">
     <span aria-hidden="true">&times;</span>
