--- a/hawc/apps/summary/templates/summary/summarytable_detail.html
+++ b/hawc/apps/summary/templates/summary/summarytable_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="d-flex">
-    <h2>{{object}}</h2>
+    <h2>{{object}}</h2> {% include "assessment/fragments/tag_indicators.html" with content_type=content_object.0.pk object_id=content_object.1 %}
     {% include "common/unpublished_badge.html" %}
     {% if crud == "Read" %}
       {% actions %}
