--- a/hawc/apps/summary/templates/summary/summarytable_list.html
+++ b/hawc/apps/summary/templates/summary/summarytable_list.html
@@ -24,7 +24,13 @@
       <tbody>
         {% for object in object_list %}
           <tr>
-            <td><a href="{{object.get_absolute_url}}">{{object.title}}</a>
+            <td>
+              <div class="d-flex">
+                <a href="{{object.get_absolute_url}}">{{object.title}}</a>
+                {% for tagged_item in object.tags.all %}
+                  <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
+                {% endfor %}
+              </div>
               {% if obj_perms.edit and not object.published %}
                 <i class="fa fa-eye-slash" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
               {% endif %}
