--- a/hawc/apps/summary/templates/summary/visual_list.html
+++ b/hawc/apps/summary/templates/summary/visual_list.html
@@ -27,8 +27,15 @@
             <div class="d-flex">
               <a href="{{visual.get_absolute_url}}">{{visual.title}}</a>
               {% for tagged_item in visual.tags.all %}
-              <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
+                <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
               {% endfor %}
+              {% for tagged_item in visual.datapivotquery.tags.all %}
+                <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
+              {% endfor %}
+              {% for tagged_item in visual.datapivotupload.tags.all %}
+                <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
+              {% endfor %}
+
             </div>
             {% if not visual.published %}
               <i class="fa fa-eye-slash" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
