--- a/hawc/apps/summary/templates/summary/visual_list.html
+++ b/hawc/apps/summary/templates/summary/visual_list.html
@@ -24,26 +24,25 @@
       {% for visual in objects %}
         <tr>
           <td>
-            <div class="d-flex">
-              <a href="{{visual.get_absolute_url}}">{{visual.title}}</a>
+            <div class="d-flex align-items-center">
+              <a class="text-nowrap" href="{{visual.get_absolute_url}}">{{visual.title}}</a>
               {% for tagged_item in visual.tags.all %}
-                <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
+                <div class="tny mx-1 label" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
               {% endfor %}
               {% for tagged_item in visual.datapivotquery.tags.all %}
-                <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
+                <div class="tny mx-1 label" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
               {% endfor %}
               {% for tagged_item in visual.datapivotupload.tags.all %}
-                <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
+                <div class="tny mx-1 label" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
               {% endfor %}
-
+              {% if not visual.published %}
+                <i class="fa fa-eye-slash mx-1" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
+              {% endif %}
+              {% debug_badge visual.id %}
+              {% if visual.caption %}
+                <div class='text-muted mx-1 text-nowrap' title="{{visual.caption|striptags|safe}}">{{visual.caption|striptags|truncatewords:20|safe}}</div>
+              {% endif %}
             </div>
-            {% if not visual.published %}
-              <i class="fa fa-eye-slash" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
-            {% endif %}
-            {% debug_badge visual.id %}
-            {% if visual.caption %}
-              <div class='text-muted'>{{visual.captionstriptags|striptags|truncatewords:20|safe}}</div>
-            {% endif %}
           </td>
           <td>{{visual.get_visual_type_display}}</td>
           <td>{{ visual.created|date:"Y-m-d" }}</td>
