--- a/hawc/apps/summary/templates/summary/summarytable_list.html
+++ b/hawc/apps/summary/templates/summary/summarytable_list.html
@@ -27,7 +27,7 @@
             <td>
               <div class="d-flex">
                 <a href="{{object.get_absolute_url}}">{{object.title}}</a>
-                {% for tagged_item in object.tags.all %}
+                {% for tagged_item in object.visible_tags %}
                   <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
                 {% endfor %}
               </div>
