--- a/hawc/apps/mgmt/templates/mgmt/fragments/task_detail.html
+++ b/hawc/apps/mgmt/templates/mgmt/fragments/task_detail.html
@@ -6,14 +6,14 @@
     <span>{{ object.study.created|date:"SHORT_DATE_FORMAT" }}</span>
   </td>
   <td>
-    <span>{{ object.get_type_display }}</span>
+    <span>{{ object.type.name }}</span>
   </td>
   <td>
     {{object.owner|default:"---"}}
   </td>
   <td>
     <i class="fa fa-circle mgmt-circle s{{ object.status }}"></i>
-    {{ object.get_status_display }}
+    {{ object.status.name }}
   </td>
   <td>
     <div class="d-flex">
