--- a/hawc/apps/summary/templates/summary/summarytable_list.html
+++ b/hawc/apps/summary/templates/summary/summarytable_list.html
@@ -28,7 +28,7 @@
               <div class="d-flex">
                 <a href="{{object.get_absolute_url}}">{{object.title}}</a>
                 {% for tagged_item in object.visible_tags %}
-                  <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.color|contrast_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
+                  <div class="tny mx-1 label label-clip" style="background-color: {{tagged_item.tag.color}}; color: {{tagged_item.tag.text_color}};" title="{{tagged_item.tag.description}}">{{tagged_item.tag.name}}</div>
                 {% endfor %}
               </div>
               {% if obj_perms.edit and not object.published %}
