--- a/hawc/apps/assessment/templates/assessment/tag_list.html
+++ b/hawc/apps/assessment/templates/assessment/tag_list.html
@@ -14,7 +14,7 @@
   </div>
   <div>
     <div class="my-2 box-shadow-minor list-group py-0" id="tag-listgroup">
-      {% for object in tags %}
+      {% for object in object_list %}
         {% include "assessment/fragments/tag_row.html" with canEdit=True %}
       {% endfor %}
       <div class="alert alert-info text-center show-only-child my-0">No labels created (yet).</div>
