fix popup text for confidence

--- a/hawc/apps/assessment/templates/assessment/assessmentvalue_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessmentvalue_detail.html
@@ -73,5 +73,5 @@
 {% endblock %}
 
 {% block extrajs %}
-  {% if object.adaf %}{% include "common/helptext_popup_js.html" %}{% endif %}
+  {% include "common/helptext_popup_js.html" %}
 {% endblock %}
