remove user_can_edit_assessment (#1071)
* remove user_can_edit_assessment, update assessment detail page

* fix for prime flavor

---------

Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/assessment/templates/assessment/assessment_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_detail.html
@@ -137,93 +137,96 @@
   </table>
 
   {% if is_team_member %}
-    <h3>Assessment details for team members*</h3>
-    <table id="assessment_table" class="table table-sm table-striped">
-      {% bs4_colgroup '25,25,25,25' %}
-      <tbody>
-        <tr>
-          <th>Assessment team</th>
-          <td>
-            <p><strong>Project manager{{ object.project_manager.all|pluralize }}</strong></p>
-            <ul class="mb-0">
-              {% for m in object.project_manager.active %}
-                <li title="{{m.email}}">{{ m.get_full_name }}</li>
-              {% endfor %}
-            </ul>
-          </td>
-          <td>
-            <p><strong>Team member{{ object.team_members.all|pluralize }}</strong></p>
-            <ul class="mb-0">
-              {% for m in object.team_members.active %}
-                <li title="{{m.email}}">{{ m.get_full_name }}</li>
-              {% empty %}
-                <li><i>None assigned</i></li>
-              {% endfor %}
-            </ul>
-          </td>
-          <td>
-            <p><strong>Reviewer{{ object.reviewers.all|pluralize }}</strong></p>
-            <ul class="mb-0">
-              {% for m in object.reviewers.active %}
-                <li title="{{m.email}}">{{ m.get_full_name }}</li>
-              {% empty %}
-                <li><i>None assigned</i></li>
-              {% endfor %}
-            </ul>
-          </td>
-        </tr>
-
-        <tr>
-          <th>Editable</th>
-          <td colspan="3">{{object.editable|yesno:"Yes,No"}}</td>
-        </tr>
-
-        <tr>
-          <th>Public</th>
-          <td colspan="3">
-            {% if object.public_on %}
-              Yes; published on {{object.public_on|date:"DATE_FORMAT"}}
-            {% else %}
-              No; this assessment is currently private
-            {% endif %}
-          </td>
-        </tr>
-
-        {% if object.public_on %}
+    <div class="bg-lightblue rounded p-3 mb-3">
+      <h3>Assessment details for team members*</h3>
+      <table id="assessment_table" class="table table-sm table-striped bg-white my-0">
+        {% bs4_colgroup '25,25,25,25' %}
+        <tbody>
           <tr>
-            <th>Hidden from public assessments page?</th>
-            <td colspan="3">{{object.hide_from_public_page|yesno:"Yes; available if you have the link but hidden from the list page,No; it's available via searching or browsing"|safe}}</td>
+            <th>Assessment team</th>
+            <td>
+              <p><strong>Project manager{{ object.project_manager.all|pluralize }}</strong></p>
+              <ul class="mb-0">
+                {% for m in object.project_manager.active %}
+                  <li title="{{m.email}}">{{ m.get_full_name }}</li>
+                {% endfor %}
+              </ul>
+            </td>
+            <td>
+              <p><strong>Team member{{ object.team_members.all|pluralize }}</strong></p>
+              <ul class="mb-0">
+                {% for m in object.team_members.active %}
+                  <li title="{{m.email}}">{{ m.get_full_name }}</li>
+                {% empty %}
+                  <li><i>None assigned</i></li>
+                {% endfor %}
+              </ul>
+            </td>
+            <td>
+              <p><strong>Reviewer{{ object.reviewers.all|pluralize }}</strong></p>
+              <ul class="mb-0">
+                {% for m in object.reviewers.active %}
+                  <li title="{{m.email}}">{{ m.get_full_name }}</li>
+                {% empty %}
+                  <li><i>None assigned</i></li>
+                {% endfor %}
+              </ul>
+            </td>
           </tr>
-        {% endif %}
 
-        <tr>
-          <th>Date created</th>
-          <td colspan="3">Created by {{object.creator}} on {{object.created|date:"DATE_FORMAT"}}</td>
-        </tr>
-
-        {% if object.details and object.details.qa_id %}
-          {% url_or_span object.details.qa_id object.details.qa_url as qa_identifier %}
           <tr>
-            <th>QA Identifier</th>
-            <td colspan="3">{{ qa_identifier }}</td>
+            <th>Assessment ID</th>
+            <td colspan="3">{{object.id}}</td>
           </tr>
-        {% endif %}
 
-        {% if internal_communications|hastext %}
           <tr>
-            <th>Internal communications</th>
-            <td colspan="3">{{ internal_communications|safe }}</td>
+            <th>Editable</th>
+            <td colspan="3">{{object.editable|yesno:"Yes,No"}}</td>
           </tr>
-        {% endif %}
-      </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="5" class="text-muted">
-            * These fields are only shown to assessment team members, even if the assessment is made public.
-          </td>
-        </tr>
-      </tfoot>
-    </table>
+
+          <tr>
+            <th>Public</th>
+            <td colspan="3">
+              {% if object.public_on %}
+                Yes; published on {{object.public_on|date:"DATE_FORMAT"}}
+              {% else %}
+                No; this assessment is currently private
+              {% endif %}
+            </td>
+          </tr>
+
+          {% if object.public_on %}
+            <tr>
+              <th>Hidden from public assessments page?</th>
+              <td colspan="3">{{object.hide_from_public_page|yesno:"Yes; available if you have the link but hidden from the list page,No; it's available via searching or browsing"|safe}}</td>
+            </tr>
+          {% endif %}
+
+          <tr>
+            <th>Date created</th>
+            <td colspan="3">Created by {{object.creator}} on {{object.created|date:"DATE_FORMAT"}}</td>
+          </tr>
+
+          {% if object.details and object.details.qa_id %}
+            {% url_or_span object.details.qa_id object.details.qa_url as qa_identifier %}
+            <tr>
+              <th>QA Identifier</th>
+              <td colspan="3">{{ qa_identifier }}</td>
+            </tr>
+          {% endif %}
+
+          {% if internal_communications|hastext %}
+            <tr>
+              <th>Internal communications</th>
+              <td colspan="3">{{ internal_communications|safe }}</td>
+            </tr>
+          {% endif %}
+        </tbody>
+      </table>
+      <span class="text-muted">
+        * These fields are only shown to assessment team members, even if the assessment is made public.
+      </span>
+    </div>
   {% endif %}
 
   {% if crud == "Read" %}
